Moved test stuff to test folder