@@ -1,4 +1,4 @@
-package com.levelup.calculate.config;
+package com.levelup.config;
 
 import java.io.File;
 import java.util.concurrent.ConcurrentHashMap;
@@ -50,7 +50,7 @@ public class Environment {
      */
     public <T> T createInstance(Class<T> clazz) {
         try {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException("Unable to create instance of: " + clazz.getName(), e);
         }
